--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "illusive/conduit",
+    "name": "flux/conduit",
     "authors": [
         {
             "name": "Matt Croft",
@@ -9,8 +9,7 @@
     "require": {
       "illuminate/support": "~5.1",
       "illuminate/filesystem": "~5.1",
-      "symfony/process": "~2.7|~3.0",
-      "toin0u/digitalocean-v2": "~1.0"
+      "symfony/process": "~2.7|~3.0"
     },
     "autoload": {
       "psr-4": {
