--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flux/conduit",
+    "name": "reflect-digital/conduit",
     "authors": [
         {
             "name": "Matt Croft",
